# cert-manager

./: .gitignore  .trufflehawk  BUILD.txt  Gopkg.toml
cmd/controller/: BUILD.bazel  start.go
contrib/charts/cert-manager/charts/: webhook-v0.6.0-dev.0.tgz
pkg/apis/certmanager/v1alpha1/: types_certificate.go  types_issuer.go  zz_generated.deepcopy.go
pkg/apis/certmanager/validation/: certificate_for_issuer.go  issuer.go  issuer_test.go
pkg/controller/: issuer_factory.go
pkg/controller/certificates/: sync.go
pkg/controller/clusterissuers/: checks.go
pkg/controller/issuers/: checks.go
pkg/issuer/: BUILD.bazel
pkg/issuer/acme/dns/: BUILD.bazel  dns.go
pkg/issuer/acme/dns/alidns/: BUILD.bazel  alidns.go  alidns_test.go
pkg/issuer/acme/dns/util/: wait.go  wait_test.go
pkg/issuer/cfssl/: BUILD.bazel  cfssl.go  issue.go  issue_test.go  prepare.go  renew.go  setup.go
pkg/util/pki/: csr.go  csr_test.go
test/e2e/certificate/: BUILD.bazel  certificate_cfssl.go
test/e2e/issuer/: issuer_cfssl.go
test/util/: BUILD.bazel  util.go
test/util/cfssl/: BUILD.bazel  util.go
