load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["alidns.go"],
    importpath = "github.com/jetstack/cert-manager/pkg/issuer/acme/dns/alidns",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/issuer/acme/dns/util:go_default_library",
        "//vendor/github.com/aliyun/alibaba-cloud-sdk-go/sdk:go_default_library",
        "//vendor/github.com/aliyun/alibaba-cloud-sdk-go/sdk/auth/credentials:go_default_library",
        "//vendor/github.com/aliyun/alibaba-cloud-sdk-go/sdk/requests:go_default_library",
        "//vendor/github.com/aliyun/alibaba-cloud-sdk-go/services/alidns:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
